--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,35 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
+    --purplePrimary: 252, 100%, 62%;
+    --purpleHover: 252,100%,84%;
+    --lightPurple: 252,100%,96%;
+    --darkGrey: 0, 0%, 20%;
+    --themeGrey: 0, 0%, 45%;
+    --border: 0,0%,85%;
+    --lightGrey: 0, 0%, 98%;
+    --white: 0, 0%, 100%;
+    --redTheme: 0,100%,61%;
+    --radius: 0.5em;
+    --activeShadow: 252,100%,62%,0.25;
+    --github: 0, 0%, 10%, 1;
+    --frontendMentor: 0, 0%, 85%;
+    --twitter: 198, 79%, 59%;
+    --linkedIn : 223, 100%, 59%;
+    --youtube:0, 84%, 58%;
+    --facebook:227, 66%, 41%;
+    --twitch: 313, 84%, 59%;
+    --devto: 0, 0%, 20%;
+    --codewars: 331, 68%, 32%;
+    --freecodecamp: 252, 50%, 27%;
+    --gitlab: 11, 83%, 53%;
+    --hashnode: 227, 98%, 42%;
+    --stackoverflow: 29, 100%, 46%;
+    --bold: 700;
+    --regular: 400;
+    --line-height:1.5,
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
   }
 }
