--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,8 +29,15 @@
     --hashnode: 227, 98%, 42%;
     --stackoverflow: 29, 100%, 46%;
     --bold: 700;
+    --semibold:600;
     --regular: 400;
     --line-height:1.5,
 
   }
+}
+
+.header_container {
+  margin: 0 auto;
+  max-width: 2200px;
+  padding: 24px
 }
